--- a/springProjects/updateanddelete/src/main/resources/application.properties
+++ b/springProjects/updateanddelete/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=2BzM7gH0
 spring.jpa.hibernate.ddl-auto=update
 
+
+spring.mvc.view.prefix=/WEB-INF/
